--- a/style/document.css
+++ b/style/document.css
@@ -8,9 +8,11 @@
 @import url('./elements.css'); /* TODO: refactor*/
 @import url('./base.css');
 
+
+
 body, html {
-    height: 100vh;
-    width: 100vw;
+    height: 100dvh;
+    width: 100dvw;
     position: relative;
     -webkit-touch-callout: none;
     /* -webkit-user-select: none;
@@ -23,7 +25,7 @@ body {
     margin: 0;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow: hidden; 
     font-family: "Baloo Thambi 2", sans-serif;
     font-size: 16px;
 }
